<resources>
    <string name="app_name">whats next</string>
    <string name="placeholder">placeholder</string>
    <string name="placeholderNumber">00</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="edit">edit</string>
    <string name="deleteDescription">"Would you like to delete every instance of this habit, or just this instance of this habit on this selected day?</string>
    <string name="deleteTitle">Delete Options</string>
    <string name="delete"> Delete </string>
    <string name="close"> X </string>
    <string name="eInstance">Every instance</string>
    <string name="tInstance">This instance</string>
    <string name="events"> Events </string>
    <string name="habits"> To Do</string>
    <string name="prev"> prev </string>
    <string name="next"> next </string>
    <string name="monday">mon</string>
    <string name="tuesday">tues</string>
    <string name="wednesday">wed</string>
    <string name="thursday">thurs</string>
    <string name="friday">fri</string>
    <string name="saturday">sat</string>
    <string name="sunday">sun</string>
    <string name="editH">Edit Habit</string>
    <string name="nameH">Habit Name</string>
    <string name="descH">Habit Description</string>
    <string name="startDateH"> Habit Start Date</string>
    <string name="colourH"> Habit Display Colour</string>
    <string name="iconH"> Habit Icon </string>
    <string name="freqH"> Habit Frequency </string>
    <string name="goalH"> Goal </string>
    <string name="unitH"> Unit </string>
    <string name="colourPicker"> Pick Colour</string>
    <string name="editE"> Edit Event </string>
    <string name="nameE">Event Name</string>
    <string name="dateE">Event Date</string>
    <string name="iconE"> Event Icon</string>
    <string name="ColourE"> Event Colour</string>
    <string name="nameError"> Please enter a name</string>
    <string name="nameLengthLongError"> please enter a name shorter than 20 characters </string>
    <string name="invalidDateFormat"> Invalid date format. Please use YYYY-MM-DD </string>
    <string name="descriptionError"> please enter a description </string>
    <string name="decriptionLengthError"> please enter a description shorter than 35 characters </string>
    <string name="unitError"> please enter a unit </string>
    <string name="unitLength">please enter a unit shorter than 10 characters</string>
    <string name="goalError">please enter a goal less than 9999</string>
    <string name="goalFormat">Invalid goal format. Please make this a number</string>
    <string name="eventFinished">Event Finished</string>
    <string name="finishedText">Finished</string>
    <string name="errorText">Error</string>
    <string name="dateError">Invalid Date</string>
    <string name="eventChannelname">eventNotifications</string>
    <string name="eventChannelDescription">notifications regarding events</string>
    <string name="notificationE">Event Notifications</string>
    <string name="current_date">current date</string>
    <string-array name="icon_array">
        <item>question</item>
        <item>mirrorball</item>
        <item>graduation_cap</item>
    </string-array>
    <string-array name="notification_array">
        <item>none</item>
        <item>day before</item>
        <item>week before</item>
        <item>month before</item>
    </string-array>
    <string-array name="freq_array">
        <item>daily</item>
        <item>weekly</item>
        <item>monthly</item>
        <item>once</item>
    </string-array>
</resources>