<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Habits Button -->
    <Button
        android:id="@+id/habitsButton"
        android:layout_width="188dp"
        android:layout_height="51dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/habits"
        android:textColor="#050505"
        android:textColorLink="#FFFFFF"
        app:cornerRadius="4dp"
        app:iconPadding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.013"
        app:strokeColor="#2E2C2C"
        app:strokeWidth="1dp" />

    <!-- Events Button -->
    <Button
        android:id="@+id/eventsButton"
        android:layout_width="188dp"
        android:layout_height="51dp"
        android:backgroundTint="#2E2C2C"
        android:text="@string/events"
        android:textColor="#ffffff"
        app:cornerRadius="4dp"
        app:iconPadding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.013"
        app:strokeColor="#2E2C2C"
        app:strokeWidth="1dp" />

    <!-- ScrollView for Content -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView2"
        android:layout_width="408dp"
        android:layout_height="700dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/habitsButton"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Past Event TextView -->
            <TextView
                android:id="@+id/pastEventText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textColor="#000000"
                android:textSize="16sp" />

            <!-- RecyclerView for displaying past events -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pastView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:nestedScrollingEnabled="false">

            </androidx.recyclerview.widget.RecyclerView>

            <!-- Future Event TextView -->
            <TextView
                android:id="@+id/futureEventText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textColor="#000000"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/futureView"
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/addButton"
        android:layout_width="75dp"
        android:layout_height="80dp"
        android:layout_marginTop="13dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/plus"
        android:textColor="#050505"
        android:textSize="40sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:strokeColor="#2E2C2C"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>

